Add no results message and add to tracking button

--- a/SearchPage.html
+++ b/SearchPage.html
@@ -19,6 +19,7 @@
 		</form>
 	<br>
 	<div id="search_result">
+		<p id="no_result" hidden>No results found</p>
 		<table border="1" id="results" hidden>
 			<thead>
 				<tr>
@@ -27,6 +28,7 @@
 					<th>End Date</th>
 					<th>Location</th>
 					<th>Website</th>
+					<th>Add to Tracking List</th>
 				</tr>
 			</thead>
 			<tbody id="conventions-body">
