--- a/SearchPage.html
+++ b/SearchPage.html
@@ -35,6 +35,6 @@
             </tbody>
 		</table>
 	</div>
-	<script src="SearchController.js"></script>
+	<script type="module" src="SearchController.js"></script>
 	</body>
 </html>
