Add table display and remove function to table

--- a/Screens/TrackingPage.html
+++ b/Screens/TrackingPage.html
@@ -15,13 +15,13 @@
                         <th>Start Date</th>
                         <th>End Date</th>
                         <th>Location</th>
-                        <th>Website</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
                 <tbody id="interested-body">
                 </tbody>
             </table>
+            <p id="deleted" hidden></p>
         </div>
         <script type="module" src="TrackingController.js"></script>
 	</body>
