add button to allow navigation back to search page

--- a/Screens/TrackingPage.html
+++ b/Screens/TrackingPage.html
@@ -4,6 +4,7 @@
 		<title>Anime Convention Tracker - Interested</title>
 	</head>
 	<body>
+        <button id="view_search">Go to Search Page</button>
 		<h2>Interested Anime Conventions</h2>
         <br>
         <div id="interested_list">
